--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "MIT",
   "packageManager": "pnpm@10.10.0",
   "devDependencies": {
+    "unocss": "^66.2.0",
     "vitepress": "^1.6.3",
     "vue": "^3.5.16"
   }
