--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "unocss": "^66.2.0",
     "vitepress": "^1.6.3",
     "vue": "^3.5.16"
+  },
+  "dependencies": {
+    "@bprogress/core": "^1.3.4"
   }
 }
